// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPreviewButton render() should render currentPostLink otherwise 1`] = `
<ForwardRef(Button)
  className="editor-post-preview"
  disabled={false}
  href="https://wordpress.org/?p=1"
  onClick={[Function]}
  target="wp-preview-1"
  variant="tertiary"
>
  Preview
  <ForwardRef(VisuallyHidden)
    as="span"
  >
    (opens in a new tab)
  </ForwardRef(VisuallyHidden)>
</ForwardRef(Button)>
`;

exports[`PostPreviewButton render() should render previewLink if provided 1`] = `
<ForwardRef(Button)
  className="editor-post-preview"
  disabled={false}
  href="https://wordpress.org/?p=1&preview=true"
  onClick={[Function]}
  target="wp-preview-1"
  variant="tertiary"
>
  Preview
  <ForwardRef(VisuallyHidden)
    as="span"
  >
    (opens in a new tab)
  </ForwardRef(VisuallyHidden)>
</ForwardRef(Button)>
`;
